<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:id="@+id/milan12_top_container"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:paddingLeft="10dp" 
        android:paddingTop="15dp" >

        <ImageButton
            android:id="@+id/milan12_add"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:paddingRight="5dp"
            android:background="@android:color/transparent"           
            android:src="@drawable/plus_button" />

        <TextView
            android:id="@+id/milan12_title"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:text="@string/milan12"
            android:textAppearance="?android:attr/textAppearanceLarge" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/milan12_bottom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <Button
            android:id="@+id/milan12_attendees"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/whosAttending"
            android:textAppearance="?android:attr/textAppearanceSmall" />

        <Button
            android:id="@+id/milan12_mySchedule"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/mySchedule"
            android:textAppearance="?android:attr/textAppearanceSmall" />
    </LinearLayout>
    
    <LinearLayout
        android:id="@+id/jakarta12_top_container"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:paddingLeft="10dp" 
        android:paddingTop="15dp" >

        <ImageButton
            android:id="@+id/jakarta12_add"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:paddingRight="5dp"
            android:background="@android:color/transparent"          
            android:src="@drawable/plus_button" />

        <TextView
            android:id="@+id/jakarta12_title"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:text="@string/jakarta12"
            android:textAppearance="?android:attr/textAppearanceLarge" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/jakarta12_bottom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <Button
            android:id="@+id/jakarta12_attendees"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/whosAttending"
            android:textAppearance="?android:attr/textAppearanceSmall" />

        <Button
            android:id="@+id/jakarta12_mySchedule"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/mySchedule"
            android:textAppearance="?android:attr/textAppearanceSmall" />
    </LinearLayout>

</LinearLayout>